--- a/src/App.css
+++ b/src/App.css
@@ -192,3 +192,16 @@ div {
   background:#333;
   color:white;
 }
+
+.content{
+  text-align:center;
+  width: calc(100% - 100px)
+}
+
+.guide{
+  align-items: center;
+}
+
+body{
+  margin:0px;
+}
